## Copyright (C) 2023 Hubert Figuière
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License
## as published by the Free Software Foundation; either version 2
## of the License, or (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301 USA.

CDUMPAPP = $(top_srcdir)/tools/cdump/xp/cdump.pl

noinst_LTLIBRARIES = libap.la

AM_CPPFLAGS = \
	$(WP_CPPFLAGS) \
	-I$(srcdir)/xp/ToolbarIcons

libap_la_SOURCES = \
	xp/ap_App.cpp \
	xp/ap_App.h \
	xp/ap_Args.cpp \
	xp/ap_Args.h \
	xp/ap_Clipboard.h \
	xp/ap_Convert.cpp \
	xp/ap_Convert.h \
	xp/ap_Dialog_Modeless.h \
	xp/ap_Dialog_Modeless.cpp \
	xp/ap_Dialog_Modal.h \
	xp/ap_Dialog_Modal.cpp \
	xp/ap_Dialog_Annotation.h \
	xp/ap_Dialog_Background.cpp \
	xp/ap_Dialog_Background.h \
	xp/ap_Dialog_Border_Shading.cpp \
	xp/ap_Dialog_Border_Shading.h \
	xp/ap_Dialog_Break.cpp \
	xp/ap_Dialog_Break.h \
	xp/ap_Dialog_Columns.cpp \
	xp/ap_Dialog_Columns.h \
	xp/ap_Dialog_Field.cpp \
	xp/ap_Dialog_Field.h \
	xp/ap_Dialog_FormatFootnotes.cpp \
	xp/ap_Dialog_FormatFootnotes.h \
	xp/ap_Dialog_FormatFrame.cpp \
	xp/ap_Dialog_FormatFrame.h \
	xp/ap_Dialog_FormatTable.cpp \
	xp/ap_Dialog_FormatTable.h \
	xp/ap_Dialog_FormatTOC.cpp \
	xp/ap_Dialog_FormatTOC.h \
	xp/ap_Dialog_Goto.cpp \
	xp/ap_Dialog_Goto.h \
	xp/ap_Dialog_HdrFtr.cpp \
	xp/ap_Dialog_HdrFtr.h \
	xp/ap_Dialog_Id.h \
	xp/ap_Dialog_GetStringCommon.cpp \
	xp/ap_Dialog_GetStringCommon.h \
	xp/ap_Dialog_InsertBookmark.cpp \
	xp/ap_Dialog_InsertBookmark.h \
	xp/ap_Dialog_InsertXMLID.cpp \
	xp/ap_Dialog_InsertXMLID.h \
	xp/ap_Dialog_Insert_DateTime.cpp \
	xp/ap_Dialog_Insert_DateTime.h \
	xp/ap_Dialog_InsertHyperlink.cpp \
	xp/ap_Dialog_InsertHyperlink.h \
	xp/ap_Dialog_InsertTable.cpp \
	xp/ap_Dialog_InsertTable.h \
	xp/ap_Dialog_Latex.cpp \
	xp/ap_Dialog_Latex.h \
	xp/ap_Dialog_ListRevisions.cpp \
	xp/ap_Dialog_ListRevisions.h \
	xp/ap_Dialog_Lists.cpp \
	xp/ap_Dialog_Lists.h \
	xp/ap_Dialog_MailMerge.cpp \
	xp/ap_Dialog_MailMerge.h \
	xp/ap_Dialog_MarkRevisions.cpp \
	xp/ap_Dialog_MarkRevisions.h \
	xp/ap_Dialog_MergeCells.cpp \
	xp/ap_Dialog_MergeCells.h \
	xp/ap_Dialog_MetaData.h \
	xp/ap_Dialog_New.cpp \
	xp/ap_Dialog_New.h \
	xp/ap_Dialog_Options.cpp \
	xp/ap_Dialog_Options.h \
	xp/ap_Dialog_PageNumbers.cpp \
	xp/ap_Dialog_PageNumbers.h \
	xp/ap_Dialog_PageSetup.cpp \
	xp/ap_Dialog_PageSetup.h \
	xp/ap_Dialog_Paragraph.cpp \
	xp/ap_Dialog_Paragraph.h \
	xp/ap_Dialog_Replace.cpp \
	xp/ap_Dialog_Replace.h \
	xp/ap_Dialog_Spell.h \
	xp/ap_Dialog_SplitCells.cpp \
	xp/ap_Dialog_SplitCells.h \
	xp/ap_Dialog_Stub.h \
	xp/ap_Dialog_Styles.cpp \
	xp/ap_Dialog_Styles.h \
	xp/ap_Dialog_Stylist.cpp \
	xp/ap_Dialog_Stylist.h \
	xp/ap_Dialog_Tab.cpp \
	xp/ap_Dialog_Tab.h \
	xp/ap_Dialog_ToggleCase.cpp \
	xp/ap_Dialog_ToggleCase.h \
	xp/ap_Dialog_WordCount.cpp \
	xp/ap_Dialog_WordCount.h \
	xp/ap_Dialog_RDFQuery.cpp \
	xp/ap_Dialog_RDFQuery.h \
	xp/ap_Dialog_RDFEditor.cpp \
	xp/ap_Dialog_RDFEditor.h \
	xp/ap_EditMethods.cpp \
	xp/ap_EditMethods.h \
	xp/ap_EmbeddedFeatures.h \
	xp/ap_Features.h \
	xp/ap_Frame.cpp \
	xp/ap_FrameData.cpp \
	xp/ap_FrameData.h \
	xp/ap_Frame.h \
	xp/ap_FrameListener.h \
	xp/ap_LB_DeadAbovedot.cpp \
	xp/ap_LB_DeadAbovedot.h \
	xp/ap_LB_DeadAcute.cpp \
	xp/ap_LB_DeadAcute.h \
	xp/ap_LB_DeadBreve.cpp \
	xp/ap_LB_DeadBreve.h \
	xp/ap_LB_DeadCaron.cpp \
	xp/ap_LB_DeadCaron.h \
	xp/ap_LB_DeadCedilla.cpp \
	xp/ap_LB_DeadCedilla.h \
	xp/ap_LB_DeadCircumflex.cpp \
	xp/ap_LB_DeadCircumflex.h \
	xp/ap_LB_DeadDiaeresis.cpp \
	xp/ap_LB_DeadDiaeresis.h \
	xp/ap_LB_DeadDoubleacute.cpp \
	xp/ap_LB_DeadDoubleacute.h \
	xp/ap_LB_DeadGrave.cpp \
	xp/ap_LB_DeadGrave.h \
	xp/ap_LB_DeadMacron.cpp \
	xp/ap_LB_DeadMacron.h \
	xp/ap_LB_DeadOgonek.cpp \
	xp/ap_LB_DeadOgonek.h \
	xp/ap_LB_DeadTilde.cpp \
	xp/ap_LB_DeadTilde.h \
	xp/ap_LB_Default.cpp \
	xp/ap_LB_Default.h \
	xp/ap_LeftRuler.cpp \
	xp/ap_LeftRuler.h \
	xp/ap_LoadBindings.cpp \
	xp/ap_LoadBindings.h \
	xp/ap_Menu_ActionSet.cpp \
	xp/ap_Menu_Functions.cpp \
	xp/ap_Menu_Functions.h \
	xp/ap_Menu_Id.h \
	xp/ap_Menu_Id_List.h \
	xp/ap_Menu_Layouts_All.h \
	xp/ap_Menu_Layouts.cpp \
	xp/ap_Menu_Layouts_Embedded.h \
	xp/ap_Menu_Layouts_MainMenu.h \
	xp/ap_ML_ContextEmbed.h \
	xp/ap_ML_ContextEquation.h \
	xp/ap_ML_ContextFrame.h \
	xp/ap_ML_ContextHyperlink.h \
	xp/ap_ML_ContextImage.h \
	xp/ap_ML_ContextPosObject.h \
	xp/ap_ML_ContextRevision.h \
	xp/ap_ML_ContextSquiggle.h \
	xp/ap_ML_ContextText.h \
	xp/ap_ML_ContextTOC.h \
	xp/ap_Prefs.cpp \
	xp/ap_Prefs.h \
	xp/ap_Prefs_SchemeIds.h \
	xp/ap_Preview_Abi.cpp \
	xp/ap_Preview_Abi.h \
	xp/ap_Preview_Annotation.cpp \
	xp/ap_Preview_Annotation.h \
	xp/ap_Preview_Paragraph.cpp \
	xp/ap_Preview_Paragraph.h \
	xp/ap_Ruler.cpp \
	xp/ap_Ruler.h \
	xp/ap_StatusBar.h \
	xp/ap_String_Id.h \
	xp/ap_Strings.cpp \
	xp/ap_Strings.h \
	xp/ap_TB_Layouts_Embedded.h \
	xp/ap_TB_Layouts_ExtraOps.h \
	xp/ap_TB_Layouts_FileEditOps.h \
	xp/ap_TB_Layouts_FormatOps.h \
	xp/ap_TB_Layouts_SimpleOps.h \
	xp/ap_TB_Layouts_TableOps.h \
	xp/ap_Toolbar_ActionSet.cpp \
	xp/ap_Toolbar_Functions.cpp \
	xp/ap_Toolbar_Functions.h \
	xp/ap_Toolbar_Iconmap.h \
	xp/ap_Toolbar_Icons_All.h \
	xp/ap_Toolbar_Icons.cpp \
	xp/ap_Toolbar_Id.h \
	xp/ap_Toolbar_Id_List.h \
	xp/ap_Toolbar_LabelSet.cpp \
	xp/ap_Toolbar_Layouts_All.h \
	xp/ap_Toolbar_Layouts.cpp \
	xp/ap_TopRuler.cpp \
	xp/ap_TopRuler.h \
	xp/ap_wp_sidebar.cpp \
	xp/ap_RDFContact.h \
	xp/ap_RDFContact.cpp \
	xp/ap_RDFEvent.h \
	xp/ap_RDFEvent.cpp \
	xp/ap_RDFLocation.h \
	xp/ap_RDFLocation.cpp

if ENABLE_SPELL
libap_la_SOURCES += \
	xp/ap_Dialog_Spell.cpp
endif

if ENABLE_STATUSBAR
libap_la_SOURCES += \
	xp/ap_StatusBar.cpp
endif

if ENABLE_EMACS_KEYBINDING
libap_la_SOURCES += \
	xp/ap_LB_Emacs.cpp \
	xp/ap_LB_EmacsCtrlX.cpp \
	xp/ap_LB_EmacsCtrlX.h \
	xp/ap_LB_Emacs.h
endif

if ENABLE_VI_KEYBINDING
libap_la_SOURCES += \
	xp/ap_LB_viEdit_c.cpp \
	xp/ap_LB_viEdit_c.h \
	xp/ap_LB_viEdit_colon.cpp \
	xp/ap_LB_viEdit_colon.h \
	xp/ap_LB_viEdit.cpp \
	xp/ap_LB_viEdit_d.cpp \
	xp/ap_LB_viEdit_d.h \
	xp/ap_LB_viEdit.h \
	xp/ap_LB_viEdit_r.cpp \
	xp/ap_LB_viEdit_r.h \
	xp/ap_LB_viEdit_y.cpp \
	xp/ap_LB_viEdit_y.h \
	xp/ap_LB_viInput.cpp \
	xp/ap_LB_viInput.h
endif

if TOOLKIT_GTK_ALL
AM_CPPFLAGS += 						\
	$(WP_CPPFLAGS) 						\
	-DABIWORD_PLUGINSDIR="\"$(ABIWORD_PLUGINSDIR)"\"	\
	-DICONDIR="\"$(ABIWORD_ICONDIR)\"" \
        $(CHAMPLAIN_CFLAGS)

libap_la_SOURCES += \
	gtk/GTKCommon.h \
	gtk/GTKCommon.cpp \
	gtk/ap_DocView.cpp \
	gtk/ap_DocView.h \
	gtk/ap_UnixApp.cpp \
	gtk/ap_UnixApp.h \
	gtk/ap_UnixAppImpl.cpp \
	gtk/ap_UnixAppImpl.h \
	gtk/ap_UnixClipboard.cpp \
	gtk/ap_UnixClipboard.h \
	gtk/ap_UnixDialog_All.h \
	gtk/ap_UnixDialog_Annotation.cpp \
	gtk/ap_UnixDialog_Annotation.h \
	gtk/ap_UnixDialog_Background.cpp \
	gtk/ap_UnixDialog_Background.h \
	gtk/ap_UnixDialog_Border_Shading.cpp \
	gtk/ap_UnixDialog_Border_Shading.h \
	gtk/ap_UnixDialog_Break.cpp \
	gtk/ap_UnixDialog_Break.h \
	gtk/ap_UnixDialog_Columns.cpp \
	gtk/ap_UnixDialog_Columns.h \
	gtk/ap_UnixDialogFactory.cpp \
	gtk/ap_UnixDialog_Field.cpp \
	gtk/ap_UnixDialog_Field.h \
	gtk/ap_UnixDialog_FormatFootnotes.cpp \
	gtk/ap_UnixDialog_FormatFootnotes.h \
	gtk/ap_UnixDialog_FormatFrame.cpp \
	gtk/ap_UnixDialog_FormatFrame.h \
	gtk/ap_UnixDialog_FormatTable.cpp \
	gtk/ap_UnixDialog_FormatTable.h \
	gtk/ap_UnixDialog_FormatTOC.cpp \
	gtk/ap_UnixDialog_FormatTOC.h \
	gtk/ap_UnixDialog_Goto.cpp \
	gtk/ap_UnixDialog_Goto.h \
	gtk/ap_UnixDialog_HdrFtr.cpp \
	gtk/ap_UnixDialog_HdrFtr.h \
	gtk/ap_UnixDialog_InsertBookmark.cpp \
	gtk/ap_UnixDialog_InsertBookmark.h \
	gtk/ap_UnixDialog_InsertXMLID.cpp \
	gtk/ap_UnixDialog_InsertXMLID.h \
	gtk/ap_UnixDialog_Insert_DateTime.cpp \
	gtk/ap_UnixDialog_Insert_DateTime.h \
	gtk/ap_UnixDialog_InsertHyperlink.cpp \
	gtk/ap_UnixDialog_InsertHyperlink.h \
	gtk/ap_UnixDialog_InsertTable.cpp \
	gtk/ap_UnixDialog_InsertTable.h \
	gtk/ap_UnixDialog_Latex.cpp \
	gtk/ap_UnixDialog_Latex.h \
	gtk/ap_UnixDialog_ListRevisions.cpp \
	gtk/ap_UnixDialog_ListRevisions.h \
	gtk/ap_UnixDialog_Lists.cpp \
	gtk/ap_UnixDialog_Lists.h \
	gtk/ap_UnixDialog_MailMerge.cpp \
	gtk/ap_UnixDialog_MailMerge.h \
	gtk/ap_UnixDialog_MarkRevisions.cpp \
	gtk/ap_UnixDialog_MarkRevisions.h \
	gtk/ap_UnixDialog_MergeCells.cpp \
	gtk/ap_UnixDialog_MergeCells.h \
	gtk/ap_UnixDialog_MetaData.cpp \
	gtk/ap_UnixDialog_MetaData.h \
	gtk/ap_UnixDialog_New.cpp \
	gtk/ap_UnixDialog_New.h \
	gtk/ap_UnixDialog_Options.cpp \
	gtk/ap_UnixDialog_Options.h \
	gtk/ap_UnixDialog_PageNumbers.cpp \
	gtk/ap_UnixDialog_PageNumbers.h \
	gtk/ap_UnixDialog_PageSetup.cpp \
	gtk/ap_UnixDialog_PageSetup.h \
	gtk/ap_UnixDialog_Paragraph.cpp \
	gtk/ap_UnixDialog_Paragraph.h \
	gtk/ap_UnixDialog_Replace.cpp \
	gtk/ap_UnixDialog_Replace.h \
	gtk/ap_UnixDialog_Spell.h \
	gtk/ap_UnixDialog_SplitCells.cpp \
	gtk/ap_UnixDialog_SplitCells.h \
	gtk/ap_UnixDialog_Styles.cpp \
	gtk/ap_UnixDialog_Styles.h \
	gtk/ap_UnixDialog_Stylist.cpp \
	gtk/ap_UnixDialog_Stylist.h \
	gtk/ap_UnixDialog_Tab.cpp \
	gtk/ap_UnixDialog_Tab.h \
	gtk/ap_UnixDialog_ToggleCase.cpp \
	gtk/ap_UnixDialog_ToggleCase.h \
	gtk/ap_UnixDialog_WordCount.cpp \
	gtk/ap_UnixDialog_WordCount.h \
	gtk/ap_UnixDialog_RDFQuery.cpp \
	gtk/ap_UnixDialog_RDFQuery.h \
	gtk/ap_UnixDialog_RDFEditor.cpp \
	gtk/ap_UnixDialog_RDFEditor.h \
	gtk/ap_UnixFrame.cpp \
	gtk/ap_UnixFrame.h \
	gtk/ap_UnixFrameImpl.cpp \
	gtk/ap_UnixFrameImpl.h \
	gtk/ap_UnixLeftRuler.cpp \
	gtk/ap_UnixLeftRuler.h \
	gtk/ap_UnixPrefs.cpp \
	gtk/ap_UnixPrefs.h \
	gtk/ap_UnixPreview_Annotation.cpp \
	gtk/ap_UnixPreview_Annotation.h \
	gtk/ap_UnixRuler.h \
	gtk/ap_UnixRuler.cpp \
	gtk/ap_UnixStatusBar.h \
	gtk/ap_UnixStockIcons.cpp \
	gtk/ap_UnixStockIcons.h \
	gtk/ap_Unix_TB_CFactory.cpp \
	gtk/ap_UnixToolbar_Control_All.h \
	gtk/ap_UnixToolbar_FontCombo.cpp \
	gtk/ap_UnixToolbar_FontCombo.h \
	gtk/ap_UnixToolbar_SizeCombo.cpp \
	gtk/ap_UnixToolbar_SizeCombo.h \
	gtk/ap_UnixToolbar_StyleCombo.cpp \
	gtk/ap_UnixToolbar_StyleCombo.h \
	gtk/ap_UnixToolbar_ZoomCombo.cpp \
	gtk/ap_UnixToolbar_ZoomCombo.h \
	gtk/ap_UnixTopRuler.cpp \
	gtk/ap_UnixTopRuler.h \
	gtk/ap_UnixViewListener.cpp \
	gtk/ap_UnixViewListener.h \
	gtk/ap_RDFContactGTK.h \
	gtk/ap_RDFContactGTK.cpp \
	gtk/ap_RDFEventGTK.h \
	gtk/ap_RDFEventGTK.cpp \
	gtk/ap_RDFLocationGTK.h \
	gtk/ap_RDFLocationGTK.cpp \
	gtk/ap_RDFSemanticItemFactoryGTK.h \
	gtk/ap_RDFSemanticItemFactoryGTK.cpp \
	gtk/ap_RDFSemanticItemGTKInjected.h \
	gtk/ap_RDFSemanticItemGTKInjected.cpp \
	gtk/abiwidget.cpp \
	gtk/abiwidget.h

if ENABLE_SPELL
libap_la_SOURCES += gtk/ap_UnixDialog_Spell.cpp
endif

if ENABLE_STATUSBAR
libap_la_SOURCES += gtk/ap_UnixStatusBar.cpp
endif
endif

if TOOLKIT_COCOA
include $(top_srcdir)/src/wp/main/cocoa/bundle.mk

AM_CPPFLAGS += \
	-x objective-c++

libap_la_SOURCES += \
	cocoa/ap_CocoaApp.h \
	cocoa/ap_CocoaAppImpl.h \
	cocoa/ap_CocoaAppImpl.cpp \
	cocoa/ap_CocoaApp.cpp \
	cocoa/ap_CocoaClipboard.h \
	cocoa/ap_CocoaClipboard.cpp \
	cocoa/ap_CocoaDialog_All.h \
	cocoa/ap_CocoaDialog_Annotation.h \
	cocoa/ap_CocoaDialog_Annotation.cpp \
	cocoa/ap_CocoaDialog_Background.h \
	cocoa/ap_CocoaDialog_Background.cpp \
	cocoa/ap_CocoaDialog_Break.h \
	cocoa/ap_CocoaDialog_Break.cpp \
	cocoa/ap_CocoaDialog_Columns.h \
	cocoa/ap_CocoaDialog_Columns.cpp \
	cocoa/ap_CocoaDialogFactory.cpp \
	cocoa/ap_CocoaDialog_Field.h \
	cocoa/ap_CocoaDialog_Field.cpp \
	cocoa/ap_CocoaDialog_FormatFootnotes.h \
	cocoa/ap_CocoaDialog_FormatFootnotes.cpp \
	cocoa/ap_CocoaDialog_FormatFrame.h \
	cocoa/ap_CocoaDialog_FormatFrame.cpp \
	cocoa/ap_CocoaDialog_FormatTable.h \
	cocoa/ap_CocoaDialog_FormatTable.cpp \
	cocoa/ap_CocoaDialog_FormatTOC.h \
	cocoa/ap_CocoaDialog_FormatTOC.cpp \
	cocoa/ap_CocoaDialog_Goto.h \
	cocoa/ap_CocoaDialog_Goto.cpp \
	cocoa/ap_CocoaDialog_HdrFtr.h \
	cocoa/ap_CocoaDialog_HdrFtr.cpp \
	cocoa/ap_CocoaDialog_InsertBookmark.h \
	cocoa/ap_CocoaDialog_InsertBookmark.cpp \
	cocoa/ap_CocoaDialog_Insert_DateTime.h \
	cocoa/ap_CocoaDialog_Insert_DateTime.cpp \
	cocoa/ap_CocoaDialog_InsertHyperlink.h \
	cocoa/ap_CocoaDialog_InsertHyperlink.cpp \
	cocoa/ap_CocoaDialog_InsertTable.h \
	cocoa/ap_CocoaDialog_InsertTable.cpp \
	cocoa/ap_CocoaDialog_Latex.h \
	cocoa/ap_CocoaDialog_Latex.cpp \
	cocoa/ap_CocoaDialog_ListRevisions.h \
	cocoa/ap_CocoaDialog_ListRevisions.cpp \
	cocoa/ap_CocoaDialog_Lists.h \
	cocoa/ap_CocoaDialog_Lists.cpp \
	cocoa/ap_CocoaDialog_MailMerge.h \
	cocoa/ap_CocoaDialog_MailMerge.cpp \
	cocoa/ap_CocoaDialog_MarkRevisions.h \
	cocoa/ap_CocoaDialog_MarkRevisions.cpp \
	cocoa/ap_CocoaDialog_MergeCells.h \
	cocoa/ap_CocoaDialog_MergeCells.cpp \
	cocoa/ap_CocoaDialog_MetaData.h \
	cocoa/ap_CocoaDialog_MetaData.cpp \
	cocoa/ap_CocoaDialog_New.h \
	cocoa/ap_CocoaDialog_New.cpp \
	cocoa/ap_CocoaDialog_Options.h \
	cocoa/ap_CocoaDialog_Options.cpp \
	cocoa/ap_CocoaDialog_PageNumbers.h \
	cocoa/ap_CocoaDialog_PageNumbers.cpp \
	cocoa/ap_CocoaDialog_PageSetup.h \
	cocoa/ap_CocoaDialog_PageSetup.cpp \
	cocoa/ap_CocoaDialog_Paragraph.h \
	cocoa/ap_CocoaDialog_Paragraph.cpp \
	cocoa/ap_CocoaDialog_Replace.h \
	cocoa/ap_CocoaDialog_Replace.cpp \
	cocoa/ap_CocoaDialog_SplitCells.h \
	cocoa/ap_CocoaDialog_SplitCells.cpp \
	cocoa/ap_CocoaDialog_Styles.h \
	cocoa/ap_CocoaDialog_Styles.cpp \
	cocoa/ap_CocoaDialog_Stylist.h \
	cocoa/ap_CocoaDialog_Stylist.cpp \
	cocoa/ap_CocoaDialog_Tab.h \
	cocoa/ap_CocoaDialog_Tab.cpp \
	cocoa/ap_CocoaDialog_ToggleCase.h \
	cocoa/ap_CocoaDialog_ToggleCase.cpp \
	cocoa/ap_CocoaDialog_WordCount.h \
	cocoa/ap_CocoaDialog_WordCount.cpp \
	cocoa/ap_CocoaFrame.h \
	cocoa/ap_CocoaFrameImpl.h \
	cocoa/ap_CocoaFrameImpl.cpp \
	cocoa/ap_CocoaFrame.cpp \
	cocoa/ap_CocoaLeftRuler.h \
	cocoa/ap_CocoaLeftRuler.cpp \
	cocoa/ap_CocoaPlugin.h \
	cocoa/ap_CocoaPlugin.cpp \
	cocoa/ap_CocoaPrefs.h \
	cocoa/ap_CocoaPrefs.cpp \
	cocoa/ap_CocoaPreview_Annotation.h \
	cocoa/ap_CocoaPreview_Annotation.cpp \
	cocoa/ap_Cocoa_ResourceIDs.h \
	cocoa/ap_Cocoa_ResourceIDs.cpp \
	cocoa/ap_CocoaStatusBar.h \
	cocoa/ap_CocoaStatusBar.cpp \
	cocoa/ap_Cocoa_TB_CFactory.cpp \
	cocoa/ap_CocoaToolbar_Control_All.h \
	cocoa/ap_CocoaToolbar_FontCombo.h \
	cocoa/ap_CocoaToolbar_FontCombo.cpp \
	cocoa/ap_CocoaToolbar_SizeCombo.h \
	cocoa/ap_CocoaToolbar_SizeCombo.cpp \
	cocoa/ap_CocoaToolbar_StyleCombo.h \
	cocoa/ap_CocoaToolbar_StyleCombo.cpp \
	cocoa/ap_CocoaToolbar_ZoomCombo.h \
	cocoa/ap_CocoaToolbar_ZoomCombo.cpp \
	cocoa/ap_CocoaTool.h \
	cocoa/ap_CocoaTool.cpp \
	cocoa/ap_CocoaTopRuler.h \
	cocoa/ap_CocoaTopRuler.cpp \
	cocoa/ap_CocoaViewListener.h \
	cocoa/ap_CocoaViewListener.cpp \
	cocoa/ap_PrintingDelegate.h \
	cocoa/ap_PrintingDelegate.cpp

if ENABLE_SPELL
libap_la_SOURCES += cocoa/ap_CocoaDialog_Spell.cpp \
	cocoa/ap_CocoaDialog_Spell.h
endif

resources_DATA= \
	xp/ToolbarIcons/menu_about.png \
	xp/ToolbarIcons/menu_add_column.png \
	xp/ToolbarIcons/menu_add_row.png \
	xp/ToolbarIcons/menu_book.png \
	xp/ToolbarIcons/menu_close.png \
	xp/ToolbarIcons/menu_copy.png \
	xp/ToolbarIcons/menu_credits.png \
	xp/ToolbarIcons/menu_cut.png \
	xp/ToolbarIcons/menu_delete.png \
	xp/ToolbarIcons/menu_delete_column.png \
	xp/ToolbarIcons/menu_delete_row.png \
	xp/ToolbarIcons/menu_delete_table.png \
	xp/ToolbarIcons/menu_exec.png \
	xp/ToolbarIcons/menu_exit.png \
	xp/ToolbarIcons/menu_export.png \
	xp/ToolbarIcons/menu_file-properties.png \
	xp/ToolbarIcons/menu_font.png \
	xp/ToolbarIcons/menu_help-bubble.png \
	xp/ToolbarIcons/menu_help.png \
	xp/ToolbarIcons/menu_hyperlink.png \
	xp/ToolbarIcons/menu_import.png \
	xp/ToolbarIcons/menu_insert_bookmark.png \
	xp/ToolbarIcons/menu_insert_graphic.png \
	xp/ToolbarIcons/menu_insert_hyperlink.png \
	xp/ToolbarIcons/menu_insert_image.png \
	xp/ToolbarIcons/menu_insert_symbol.png \
	xp/ToolbarIcons/menu_insert_table.png \
	xp/ToolbarIcons/menu_jump_to.png \
	xp/ToolbarIcons/menu_merge_cells.png \
	xp/ToolbarIcons/menu_new.png \
	xp/ToolbarIcons/menu_new_window.png \
	xp/ToolbarIcons/menu_open.png \
	xp/ToolbarIcons/menu_paste.png \
	xp/ToolbarIcons/menu_preferences.png \
	xp/ToolbarIcons/menu_print-setup.png \
	xp/ToolbarIcons/menu_print.png \
	xp/ToolbarIcons/menu_print_preview.png \
	xp/ToolbarIcons/menu_redo.png \
	xp/ToolbarIcons/menu_revert.png \
	xp/ToolbarIcons/menu_save.png \
	xp/ToolbarIcons/menu_save_as.png \
	xp/ToolbarIcons/menu_search.png \
	xp/ToolbarIcons/menu_search_replace.png \
	xp/ToolbarIcons/menu_spellcheck.png \
	xp/ToolbarIcons/menu_split_cells.png \
	xp/ToolbarIcons/menu_subscript.png \
	xp/ToolbarIcons/menu_superscript.png \
	xp/ToolbarIcons/menu_text_bold.png \
	xp/ToolbarIcons/menu_text_bottomline.png \
	xp/ToolbarIcons/menu_text_center.png \
	xp/ToolbarIcons/menu_text_italic.png \
	xp/ToolbarIcons/menu_text_justify.png \
	xp/ToolbarIcons/menu_text_left.png \
	xp/ToolbarIcons/menu_text_overline.png \
	xp/ToolbarIcons/menu_text_right.png \
	xp/ToolbarIcons/menu_text_strikethrough.png \
	xp/ToolbarIcons/menu_text_topline.png \
	xp/ToolbarIcons/menu_text_underline.png \
	xp/ToolbarIcons/menu_undo.png \
	xp/ToolbarIcons/menu_view_showpara.png \
	xp/ToolbarIcons/stock_new-text.png \
	xp/ToolbarIcons/tb_1column.png \
	xp/ToolbarIcons/tb_2column.png \
	xp/ToolbarIcons/tb_3column.png \
	xp/ToolbarIcons/tb_LineAll.png \
	xp/ToolbarIcons/tb_LineBottom.png \
	xp/ToolbarIcons/tb_LineLeft.png \
	xp/ToolbarIcons/tb_LineNone.png \
	xp/ToolbarIcons/tb_LineRight.png \
	xp/ToolbarIcons/tb_LineTop.png \
	xp/ToolbarIcons/tb_MergeAbove.png \
	xp/ToolbarIcons/tb_MergeBelow.png \
	xp/ToolbarIcons/tb_MergeLeft.png \
	xp/ToolbarIcons/tb_MergeRight.png \
	xp/ToolbarIcons/tb_SplitAbove.png \
	xp/ToolbarIcons/tb_SplitBelow.png \
	xp/ToolbarIcons/tb_SplitHoriMid.png \
	xp/ToolbarIcons/tb_SplitLeft.png \
	xp/ToolbarIcons/tb_SplitRight.png \
	xp/ToolbarIcons/tb_SplitVertMid.png \
	xp/ToolbarIcons/tb_WrapButton.png \
	xp/ToolbarIcons/tb_add_column.png \
	xp/ToolbarIcons/tb_add_row.png \
	xp/ToolbarIcons/tb_anchor.png \
	xp/ToolbarIcons/tb_copy.png \
	xp/ToolbarIcons/tb_cut.png \
	xp/ToolbarIcons/tb_delete_column.png \
	xp/ToolbarIcons/tb_delete_row.png \
	xp/ToolbarIcons/tb_edit.png \
	xp/ToolbarIcons/tb_edit_editfooter.png \
	xp/ToolbarIcons/tb_edit_editheader.png \
	xp/ToolbarIcons/tb_edit_removefooter.png \
	xp/ToolbarIcons/tb_edit_removeheader.png \
	xp/ToolbarIcons/tb_help.png \
	xp/ToolbarIcons/tb_hyperlink.png \
	xp/ToolbarIcons/tb_insert_graphic.png \
	xp/ToolbarIcons/tb_insert_table.png \
	xp/ToolbarIcons/tb_line_double_space.png \
	xp/ToolbarIcons/tb_line_middle_space.png \
	xp/ToolbarIcons/tb_line_single_space.png \
	xp/ToolbarIcons/tb_lists.png \
	xp/ToolbarIcons/tb_lists_bullets.png \
	xp/ToolbarIcons/tb_lists_numbers.png \
	xp/ToolbarIcons/tb_merge_cells.png \
	xp/ToolbarIcons/tb_new.png \
	xp/ToolbarIcons/tb_open.png \
	xp/ToolbarIcons/tb_para_0before.png \
	xp/ToolbarIcons/tb_para_12before.png \
	xp/ToolbarIcons/tb_paste.png \
	xp/ToolbarIcons/tb_print.png \
	xp/ToolbarIcons/tb_print_preview.png \
	xp/ToolbarIcons/tb_redo.png \
	xp/ToolbarIcons/tb_remove_graphic.png \
	xp/ToolbarIcons/tb_save.png \
	xp/ToolbarIcons/tb_save_as.png \
	xp/ToolbarIcons/tb_script_play.png \
	xp/ToolbarIcons/tb_search.png \
	xp/ToolbarIcons/tb_search_replace.png \
	xp/ToolbarIcons/tb_smiley.png \
	xp/ToolbarIcons/tb_spellcheck.png \
	xp/ToolbarIcons/tb_split_cells.png \
	xp/ToolbarIcons/tb_stock_font.png \
	xp/ToolbarIcons/tb_stock_paint.png \
	xp/ToolbarIcons/tb_symbol.png \
	xp/ToolbarIcons/tb_text_align_left.png \
	xp/ToolbarIcons/tb_text_align_right.png \
	xp/ToolbarIcons/tb_text_bgcolor.png \
	xp/ToolbarIcons/tb_text_bold.png \
	xp/ToolbarIcons/tb_text_bottomline.png \
	xp/ToolbarIcons/tb_text_center.png \
	xp/ToolbarIcons/tb_text_direction_ltr.png \
	xp/ToolbarIcons/tb_text_direction_rtl.png \
	xp/ToolbarIcons/tb_text_dom_direction_rtl.png \
	xp/ToolbarIcons/tb_text_fgcolor.png \
	xp/ToolbarIcons/tb_text_font.png \
	xp/ToolbarIcons/tb_text_indent.png \
	xp/ToolbarIcons/tb_text_italic.png \
	xp/ToolbarIcons/tb_text_justify.png \
	xp/ToolbarIcons/tb_text_overline.png \
	xp/ToolbarIcons/tb_text_strikeout.png \
	xp/ToolbarIcons/tb_text_subscript.png \
	xp/ToolbarIcons/tb_text_superscript.png \
	xp/ToolbarIcons/tb_text_topline.png \
	xp/ToolbarIcons/tb_text_underline.png \
	xp/ToolbarIcons/tb_text_unindent.png \
	xp/ToolbarIcons/tb_todo.png \
	xp/ToolbarIcons/tb_transparent.png \
	xp/ToolbarIcons/tb_undo.png \
	xp/ToolbarIcons/tb_view_full_screen.png \
	xp/ToolbarIcons/tb_view_showpara.png \
	xp/ToolbarIcons/tb_revision_new.png \
	xp/ToolbarIcons/tb_revision_select.png \
	xp/ToolbarIcons/tb_revision_show_final.png \
	xp/ToolbarIcons/tb_revision_find_prev.png \
	xp/ToolbarIcons/tb_revision_find_next.png \
	xp/ToolbarIcons/tb_semitem_this.png \
	xp/ToolbarIcons/tb_semitem_next.png \
	xp/ToolbarIcons/tb_semitem_prev.png \
	xp/ToolbarIcons/tb_semitem_edit.png \
	xp/ToolbarIcons/tb_semitem_stylesheet_apply.png

nobase_resources_DATA = \
	ap_CocoaDialog_Annotation.nib/*.nib \
	ap_CocoaDialog_Background.nib/*.nib \
	ap_CocoaDialog_Break.nib/*.nib \
	ap_CocoaDialog_Columns.nib/*.nib \
	ap_CocoaDialog_Field.nib/*.nib \
	ap_CocoaDialog_FormatFootnotes.nib/*.nib \
	ap_CocoaDialog_FormatFrame.nib/*.nib \
	ap_CocoaDialog_FormatTOC.nib/*.nib \
	ap_CocoaDialog_FormatTable.nib/*.nib \
	ap_CocoaDialog_Goto.nib/*.nib \
	ap_CocoaDialog_HdrFtr.nib/*.nib \
	ap_CocoaDialog_InsertBookmark.nib/*.nib \
	ap_CocoaDialog_InsertHyperlink.nib/*.nib \
	ap_CocoaDialog_InsertTable.nib/*.nib \
	ap_CocoaDialog_Latex.nib/*.nib \
	ap_CocoaDialog_ListRevisions.nib/*.nib \
	ap_CocoaDialog_Lists.nib/*.nib \
	ap_CocoaDialog_MailMerge.nib/*.nib \
	ap_CocoaDialog_MarkRevisions.nib/*.nib \
	ap_CocoaDialog_MergeCells.nib/*.nib \
	ap_CocoaDialog_MetaData.nib/*.nib \
	ap_CocoaDialog_New.nib/*.nib \
	ap_CocoaDialog_Options.nib/*.nib \
	ap_CocoaDialog_PageNumbers.nib/*.nib \
	ap_CocoaDialog_PageSetup.nib/*.nib \
	ap_CocoaDialog_Paragraph.nib/*.nib \
	ap_CocoaDialog_Replace.nib/*.nib \
	ap_CocoaDialog_Spell.nib/*.nib \
	ap_CocoaDialog_SplitCells.nib/*.nib \
	ap_CocoaDialog_Styles.nib/*.nib \
	ap_CocoaDialog_StylesModify.nib/*.nib \
	ap_CocoaDialog_Stylist.nib/*.nib \
	ap_CocoaDialog_Tab.nib/*.nib \
	ap_CocoaDialog_ToggleCase.nib/*.nib \
	ap_CocoaDialog_WordCount.nib/*.nib \
	ap_CocoaFrame.nib/*.nib \
	$(NULL)
endif

if TOOLKIT_WIN
AM_CPPFLAGS += \
	$(WP_CPPFLAGS) \
	-I$(top_srcdir)/src/wp/ap/xp/ToolbarIcons

libap_la_SOURCES += \
	win/ap_Win32App.cpp \
	win/ap_Win32App.h \
	win/ap_Win32AppImpl.cpp \
	win/ap_Win32AppImpl.h \
	win/ap_Win32Clipboard.cpp \
	win/ap_Win32Clipboard.h \
	win/ap_Win32Dialog_All.h \
	win/ap_Win32Dialog_Annotation.cpp \
	win/ap_Win32Dialog_Annotation.h \
	win/ap_Win32Dialog_Background.cpp \
	win/ap_Win32Dialog_Background.h \
	win/ap_Win32Dialog_Border_Shading.cpp \
	win/ap_Win32Dialog_Border_Shading.h \
	win/ap_Win32Dialog_Break.cpp \
	win/ap_Win32Dialog_Break.h \
	win/ap_Win32Dialog_Columns.cpp \
	win/ap_Win32Dialog_Columns.h \
	win/ap_Win32DialogFactory.cpp \
	win/ap_Win32Dialog_Field.cpp \
	win/ap_Win32Dialog_Field.h \
	win/ap_Win32Dialog_FormatFootnotes.cpp \
	win/ap_Win32Dialog_FormatFootnotes.h \
	win/ap_Win32Dialog_FormatFrame.cpp \
	win/ap_Win32Dialog_FormatFrame.h \
	win/ap_Win32Dialog_FormatTable.cpp \
	win/ap_Win32Dialog_FormatTable.h \
	win/ap_Win32Dialog_FormatTOC.cpp \
	win/ap_Win32Dialog_FormatTOC.h \
	win/ap_Win32Dialog_Goto.cpp \
	win/ap_Win32Dialog_Goto.h \
	win/ap_Win32Dialog_HdrFtr.cpp \
	win/ap_Win32Dialog_HdrFtr.h \
	win/ap_Win32Dialog_InsertBookmark.cpp \
	win/ap_Win32Dialog_InsertBookmark.h \
	win/ap_Win32Dialog_Insert_DateTime.cpp \
	win/ap_Win32Dialog_Insert_DateTime.h \
	win/ap_Win32Dialog_InsertHyperlink.cpp \
	win/ap_Win32Dialog_InsertHyperlink.h \
	win/ap_Win32Dialog_InsertTable.cpp \
	win/ap_Win32Dialog_InsertTable.h \
	win/ap_Win32Dialog_Latex.cpp \
	win/ap_Win32Dialog_Latex.h \
	win/ap_Win32Dialog_ListRevisions.cpp \
	win/ap_Win32Dialog_ListRevisions.h \
	win/ap_Win32Dialog_Lists.cpp \
	win/ap_Win32Dialog_Lists.h \
	win/ap_Win32Dialog_MailMerge.cpp \
	win/ap_Win32Dialog_MailMerge.h \
	win/ap_Win32Dialog_MarkRevisions.cpp \
	win/ap_Win32Dialog_MarkRevisions.h \
	win/ap_Win32Dialog_MergeCells.cpp \
	win/ap_Win32Dialog_MergeCells.h \
	win/ap_Win32Dialog_MetaData.cpp \
	win/ap_Win32Dialog_MetaData.h \
	win/ap_Win32Dialog_New.cpp \
	win/ap_Win32Dialog_New.h \
	win/ap_Win32Dialog_Options.cpp \
	win/ap_Win32Dialog_Options.h \
	win/ap_Win32Dialog_PageNumbers.cpp \
	win/ap_Win32Dialog_PageNumbers.h \
	win/ap_Win32Dialog_PageSetup.cpp \
	win/ap_Win32Dialog_PageSetup.h \
	win/ap_Win32Dialog_Paragraph.cpp \
	win/ap_Win32Dialog_Paragraph.h \
	win/ap_Win32Dialog_Replace.cpp \
	win/ap_Win32Dialog_Replace.h \
	win/ap_Win32Dialog_Spell.cpp \
	win/ap_Win32Dialog_Spell.h \
	win/ap_Win32Dialog_SplitCells.cpp \
	win/ap_Win32Dialog_SplitCells.h \
	win/ap_Win32Dialog_Stub.cpp \
	win/ap_Win32Dialog_Stub.h \
	win/ap_Win32Dialog_Styles.cpp \
	win/ap_Win32Dialog_Styles.h \
	win/ap_Win32Dialog_Stylist.cpp \
	win/ap_Win32Dialog_Stylist.h \
	win/ap_Win32Dialog_Tab.cpp \
	win/ap_Win32Dialog_Tab.h \
	win/ap_Win32Dialog_ToggleCase.cpp \
	win/ap_Win32Dialog_ToggleCase.h \
	win/ap_Win32Dialog_WordCount.cpp \
	win/ap_Win32Dialog_WordCount.h \
	win/ap_Win32Frame.cpp \
	win/ap_Win32Frame.h \
	win/ap_Win32FrameImpl.cpp \
	win/ap_Win32FrameImpl.h \
	win/ap_Win32LeftRuler.cpp \
	win/ap_Win32LeftRuler.h \
	win/ap_Win32Prefs.cpp \
	win/ap_Win32Prefs.h \
	win/ap_Win32Preview_Annotation.cpp \
	win/ap_Win32Preview_Annotation.h \
	win/ap_Win32StatusBar.cpp \
	win/ap_Win32StatusBar.h \
	win/ap_Win32_TB_CFactory.cpp \
	win/ap_Win32Toolbar_Control_All.h \
	win/ap_Win32Toolbar_FontCombo.cpp \
	win/ap_Win32Toolbar_FontCombo.h \
	win/ap_Win32Toolbar_SizeCombo.cpp \
	win/ap_Win32Toolbar_SizeCombo.h \
	win/ap_Win32Toolbar_StyleCombo.cpp \
	win/ap_Win32Toolbar_StyleCombo.h \
	win/ap_Win32Toolbar_ZoomCombo.cpp \
	win/ap_Win32Toolbar_ZoomCombo.h \
	win/ap_Win32TopRuler.cpp \
	win/ap_Win32TopRuler.h
endif

if TOOLKIT_QT
AM_CPPFLAGS += 						\
	$(WP_CPPFLAGS) 						\
	-I$(top_srcdir)/src/wp/ap/xp/ToolbarIcons 		\
	-DABIWORD_PLUGINSDIR="\"$(ABIWORD_PLUGINSDIR)"\"	\
	-DDATADIR="\"$(datadir)\""

libap_la_SOURCES += \
	qt/ap_QtApp.cpp \
	qt/ap_QtApp.h \
	qt/ap_QtAppImpl.h \
	qt/ap_QtAppImpl.cpp \
	qt/ap_QtClipboard.h \
	qt/ap_QtDialog_All.h \
	qt/ap_QtDialogFactory.cpp \
	qt/ap_QtFrame.h \
	qt/ap_QtFrame.cpp \
	qt/ap_QtFrameImpl.h \
	qt/ap_QtFrameImpl.cpp \
	qt/ap_QtPrefs.h \
	qt/ap_QtPrefs.cpp \
	qt/ap_Qt_TB_CFactory.cpp \
	qt/ap_QtToolbar_Control_All.h \
	qt/ap_QtToolbar_ZoomCombo.cpp \
	qt/ap_QtToolbar_ZoomCombo.h \
	qt/ap_QtToolbar_SizeCombo.cpp \
	qt/ap_QtToolbar_SizeCombo.h \
	qt/ap_QtToolbar_FontCombo.cpp \
	qt/ap_QtToolbar_FontCombo.h \
	qt/ap_QtToolbar_StyleCombo.cpp \
	qt/ap_QtToolbar_StyleCombo.h \
	qt/ap_QtStatusBar.cpp \
	qt/ap_QtStatusBar.h \
	qt/ap_QtStockIcons.cpp \
	qt/ap_QtStockIcons.h
endif

EXTRA_DIST = \
	xp/margin.xpm \
	xp/orient-horizontal.xpm \
	xp/orient-vertical.xpm \
	xp/sidebar.png \
	xp/ap_wp_sidebar_static.cpp \
	gtk/ap_UnixDialog_Annotation.ui \
	gtk/ap_UnixDialog_Border_Shading.ui \
	gtk/ap_UnixDialog_Break.ui \
	gtk/ap_UnixDialog_Field.ui \
	gtk/ap_UnixDialog_FormatTOC.ui \
	gtk/ap_UnixDialog_FormatFootnotes.ui \
	gtk/ap_UnixDialog_FormatTable.ui \
	gtk/ap_UnixDialog_FormatFrame.ui \
	gtk/ap_UnixDialog_Goto.ui \
	gtk/ap_UnixDialog_HdrFtr.ui \
	gtk/ap_UnixDialog_InsertTable.ui \
	gtk/ap_UnixDialog_Insert_DateTime.ui \
	gtk/ap_UnixDialog_MailMerge.ui \
	gtk/ap_UnixDialog_MetaData.ui \
	gtk/ap_UnixDialog_Options.ui \
	gtk/ap_UnixDialog_Options_ColorSel.ui \
	gtk/ap_UnixDialog_PageNumbers.ui	\
	gtk/ap_UnixDialog_PageSetup.ui \
	gtk/ap_UnixDialog_Replace.ui \
	gtk/ap_UnixDialog_New.ui \
	gtk/ap_UnixDialog_Styles.ui \
	gtk/ap_UnixDialog_Stylist.ui \
	gtk/ap_UnixDialog_Tab.ui	\
	gtk/ap_UnixDialog_WordCount.ui \
	gtk/ap_UnixDialog_Latex.ui \
	gtk/ap_UnixDialog_RDFQuery.ui \
	gtk/ap_UnixDialog_RDFEditor.ui \
	gtk/pd_RDFContact.ui \
	gtk/pd_RDFInsertReference.ui \
	gtk/pd_RDFEvent.ui \
	gtk/pd_RDFLocation.ui \
	gtk/ap_UnixDialog_SemanticStylesheets.ui \
	gtk/ap_UnixDialog_Spell.ui \
	cocoa/ap_CocoaDialog_Annotation.nib \
	cocoa/ap_CocoaDialog_Background.nib \
	cocoa/ap_CocoaDialog_Break.nib \
	cocoa/ap_CocoaDialog_Columns.nib \
	cocoa/ap_CocoaDialog_Field.nib \
	cocoa/ap_CocoaDialog_FormatFootnotes.nib \
	cocoa/ap_CocoaDialog_FormatFrame.nib \
	cocoa/ap_CocoaDialog_FormatTOC.nib \
	cocoa/ap_CocoaDialog_FormatTable.nib \
	cocoa/ap_CocoaDialog_Goto.nib \
	cocoa/ap_CocoaDialog_HdrFtr.nib \
	cocoa/ap_CocoaDialog_InsertBookmark.nib \
	cocoa/ap_CocoaDialog_InsertHyperlink.nib \
	cocoa/ap_CocoaDialog_InsertTable.nib \
	cocoa/ap_CocoaDialog_Latex.nib \
	cocoa/ap_CocoaDialog_ListRevisions.nib \
	cocoa/ap_CocoaDialog_Lists.nib \
	cocoa/ap_CocoaDialog_MailMerge.nib \
	cocoa/ap_CocoaDialog_MarkRevisions.nib \
	cocoa/ap_CocoaDialog_MergeCells.nib \
	cocoa/ap_CocoaDialog_MetaData.nib \
	cocoa/ap_CocoaDialog_New.nib \
	cocoa/ap_CocoaDialog_Options.nib \
	cocoa/ap_CocoaDialog_PageNumbers.nib \
	cocoa/ap_CocoaDialog_PageSetup.nib \
	cocoa/ap_CocoaDialog_Paragraph.nib \
	cocoa/ap_CocoaDialog_Replace.nib \
	cocoa/ap_CocoaDialog_Spell.nib \
	cocoa/ap_CocoaDialog_SplitCells.nib \
	cocoa/ap_CocoaDialog_Styles.nib \
	cocoa/ap_CocoaDialog_StylesModify.nib \
	cocoa/ap_CocoaDialog_Stylist.nib \
	cocoa/ap_CocoaDialog_Tab.nib \
	cocoa/ap_CocoaDialog_ToggleCase.nib \
	cocoa/ap_CocoaDialog_WordCount.nib \
	cocoa/ap_CocoaFrame.nib \
	win/ap_Win32Res_Border_Shading.rc2 \
	win/ap_Win32Res_DlgAnnotation.rc2 \
	win/ap_Win32Res_DlgBreak.rc2 \
	win/ap_Win32Res_DlgColumns.rc2 \
	win/ap_Win32Res_DlgDownload_File.rc2 \
	win/ap_Win32Res_DlgField.rc2 \
	win/ap_Win32Res_DlgFormatTOC.rc2 \
	win/ap_Win32Res_DlgGoto.rc2 \
	win/ap_Win32Res_DlgHdrFtr.rc2 \
	win/ap_Win32Res_DlgInsertBookmark.rc2 \
	win/ap_Win32Res_DlgInsert_DateTime.rc2 \
	win/ap_Win32Res_DlgInsertHyperlink.rc2 \
	win/ap_Win32Res_DlgInsertTable.rc2 \
	win/ap_Win32Res_DlgLatex.rc2 \
	win/ap_Win32Res_DlgList.rc2 \
	win/ap_Win32Res_DlgListRevisions.rc2 \
	win/ap_Win32Res_DlgMarkRevisions.rc2 \
	win/ap_Win32Res_DlgMetaData.rc2 \
	win/ap_Win32Res_DlgNew.rc2 \
	win/ap_Win32Res_DlgOptions.rc2 \
	win/ap_Win32Res_DlgPageNumbers.rc2 \
	win/ap_Win32Res_DlgPageSetup.rc2 \
	win/ap_Win32Res_DlgParagraph.rc2 \
	win/ap_Win32Res_DlgSpell.rc2 \
	win/ap_Win32Res_DlgStylesNewModify.rc2 \
	win/ap_Win32Res_DlgStylesTop.rc2 \
	win/ap_Win32Res_DlgStylist.rc2 \
	win/ap_Win32Res_DlgTabs.rc2 \
	win/ap_Win32Res_DlgToggleCase.rc2 \
	win/ap_Win32Res_DlgWordCount.rc2 \
	win/ap_Win32Res_FormatFootnotes.rc2 \
	win/ap_Win32Res_FormatFrame.rc2 \
	win/ap_Win32Res_FormatTable.rc2 \
	win/ap_Win32Res_Icons.rc2 \
	win/ap_Win32Res_MailMerge.rc2 \
	win/ap_Win32Res_Manifest.rc2 \
	win/ap_Win32Res_MergeCells.rc2 \
	win/ap_Win32Resources_DialogReplace.rc2 \
	win/ap_Win32Resources.rc2 \
	win/ap_Win32Res_SplitCells.rc2 \
	win/ap_Win32Res_Version.rc2 \
	win/ToolbarIcons/1column.bmp \
	win/ToolbarIcons/2column.bmp \
	win/ToolbarIcons/3column.bmp \
	win/ToolbarIcons/add_column.bmp \
	win/ToolbarIcons/add_row.bmp \
	win/ToolbarIcons/align_center.bmp \
	win/ToolbarIcons/align_justify.bmp \
	win/ToolbarIcons/align_left.bmp \
	win/ToolbarIcons/align_right.bmp \
	win/ToolbarIcons/border_dashed.bmp \
	win/ToolbarIcons/border_dotted.bmp \
	win/ToolbarIcons/border_none.bmp \
	win/ToolbarIcons/border_solid.bmp \
	win/ToolbarIcons/color_back.bmp \
	win/ToolbarIcons/color_fore.bmp \
	win/ToolbarIcons/delete_column.bmp \
	win/ToolbarIcons/delete_row.bmp \
	win/ToolbarIcons/double_space.bmp \
	win/ToolbarIcons/edit_copy.bmp \
	win/ToolbarIcons/edit_cut.bmp \
	win/ToolbarIcons/edit_footer.bmp \
	win/ToolbarIcons/edit_header.bmp \
	win/ToolbarIcons/edit_paste.bmp \
	win/ToolbarIcons/edit_redo.bmp \
	win/ToolbarIcons/edit_removefooter.bmp \
	win/ToolbarIcons/edit_removeheader.bmp \
	win/ToolbarIcons/edit_undo.bmp \
	win/ToolbarIcons/file_new.bmp \
	win/ToolbarIcons/file_open.bmp \
	win/ToolbarIcons/file_print.bmp \
	win/ToolbarIcons/file_print_preview.bmp \
	win/ToolbarIcons/file_saveas.bmp \
	win/ToolbarIcons/file_save.bmp \
	win/ToolbarIcons/fmt_bold.bmp \
	win/ToolbarIcons/fmt_bookmark.bmp \
	win/ToolbarIcons/fmt_bottomline.bmp \
	win/ToolbarIcons/fmt_dir_override_ltr.bmp \
	win/ToolbarIcons/fmt_dir_override_rtl.bmp \
	win/ToolbarIcons/fmt_dom_direction.bmp \
	win/ToolbarIcons/fmt_hyperlink.bmp \
	win/ToolbarIcons/fmt_italic.bmp \
	win/ToolbarIcons/fmt_overline.bmp \
	win/ToolbarIcons/fmtpainter.bmp \
	win/ToolbarIcons/fmt_strike.bmp \
	win/ToolbarIcons/fmt_subscript.bmp \
	win/ToolbarIcons/fmt_superscript.bmp \
	win/ToolbarIcons/fmt_topline.bmp \
	win/ToolbarIcons/fmt_underline.bmp \
	win/ToolbarIcons/ft_linebottom.bmp \
	win/ToolbarIcons/ft_lineleft.bmp \
	win/ToolbarIcons/ft_lineright.bmp \
	win/ToolbarIcons/ft_linetop.bmp \
	win/ToolbarIcons/help.bmp \
	win/ToolbarIcons/img.bmp \
	win/ToolbarIcons/indent.bmp \
	win/ToolbarIcons/insert_symbol.bmp \
	win/ToolbarIcons/insert_table.bmp \
	win/ToolbarIcons/lists_bullets.bmp \
	win/ToolbarIcons/lists_numbers.bmp \
	win/ToolbarIcons/menu_abiword_about.bmp \
	win/ToolbarIcons/menu_abiword_add_column.bmp \
	win/ToolbarIcons/menu_abiword_add_row.bmp \
	win/ToolbarIcons/menu_abiword_align_center.bmp \
	win/ToolbarIcons/menu_abiword_align_justify.bmp \
	win/ToolbarIcons/menu_abiword_align_left.bmp \
	win/ToolbarIcons/menu_abiword_align_right.bmp \
	win/ToolbarIcons/menu_abiword_bold.bmp \
	win/ToolbarIcons/menu_abiword_book.bmp \
	win/ToolbarIcons/menu_abiword_bookmark.bmp \
	win/ToolbarIcons/menu_abiword_bottomline.bmp \
	win/ToolbarIcons/menu_abiword_clear.bmp \
	win/ToolbarIcons/menu_abiword_close.bmp \
	win/ToolbarIcons/menu_abiword_copy.bmp \
	win/ToolbarIcons/menu_abiword_credits.bmp \
	win/ToolbarIcons/menu_abiword_cut.bmp \
	win/ToolbarIcons/menu_abiword_delete_column.bmp \
	win/ToolbarIcons/menu_abiword_delete_row.bmp \
	win/ToolbarIcons/menu_abiword_delete_table.bmp \
	win/ToolbarIcons/menu_abiword_execute.bmp \
	win/ToolbarIcons/menu_abiword_exit.bmp \
	win/ToolbarIcons/menu_abiword_export.bmp \
	win/ToolbarIcons/menu_abiword_font.bmp \
	win/ToolbarIcons/menu_abiword_goto.bmp \
	win/ToolbarIcons/menu_abiword_help.bmp \
	win/ToolbarIcons/menu_abiword_hyperlink.bmp \
	win/ToolbarIcons/menu_abiword_img.bmp \
	win/ToolbarIcons/menu_abiword_import.bmp \
	win/ToolbarIcons/menu_abiword_insert_symbol.bmp \
	win/ToolbarIcons/menu_abiword_insert_table.bmp \
	win/ToolbarIcons/menu_abiword_italic.bmp \
	win/ToolbarIcons/menu_abiword_merge_cells.bmp \
	win/ToolbarIcons/menu_abiword_new.bmp \
	win/ToolbarIcons/menu_abiword_open.bmp \
	win/ToolbarIcons/menu_abiword_overline.bmp \
	win/ToolbarIcons/menu_abiword_paste.bmp \
	win/ToolbarIcons/menu_abiword_preferences.bmp \
	win/ToolbarIcons/menu_abiword_print.bmp \
	win/ToolbarIcons/menu_abiword_print_preview.bmp \
	win/ToolbarIcons/menu_abiword_print_setup.bmp \
	win/ToolbarIcons/menu_abiword_properties.bmp \
	win/ToolbarIcons/menu_abiword_redo.bmp \
	win/ToolbarIcons/menu_abiword_replace.bmp \
	win/ToolbarIcons/menu_abiword_revert.bmp \
	win/ToolbarIcons/menu_abiword_saveas.bmp \
	win/ToolbarIcons/menu_abiword_save.bmp \
	win/ToolbarIcons/menu_abiword_search.bmp \
	win/ToolbarIcons/menu_abiword_spellcheck.bmp \
	win/ToolbarIcons/menu_abiword_split_cells.bmp \
	win/ToolbarIcons/menu_abiword_strike.bmp \
	win/ToolbarIcons/menu_abiword_subscript.bmp \
	win/ToolbarIcons/menu_abiword_superscript.bmp \
	win/ToolbarIcons/menu_abiword_topline.bmp \
	win/ToolbarIcons/menu_abiword_underline.bmp \
	win/ToolbarIcons/menu_abiword_undo.bmp \
	win/ToolbarIcons/mergeabove.bmp \
	win/ToolbarIcons/mergebelow.bmp \
	win/ToolbarIcons/merge_cells.bmp \
	win/ToolbarIcons/mergeleft.bmp \
	win/ToolbarIcons/mergeright.bmp \
	win/ToolbarIcons/middle_space.bmp \
	win/ToolbarIcons/optionsdlg.bmp \
	win/ToolbarIcons/para_0before.bmp \
	win/ToolbarIcons/para_12before.bmp \
	win/ToolbarIcons/script_play.bmp \
	win/ToolbarIcons/single_space.bmp \
	win/ToolbarIcons/spellcheck.bmp \
	win/ToolbarIcons/splitabove.bmp \
	win/ToolbarIcons/splitbelow.bmp \
	win/ToolbarIcons/split_cells.bmp \
	win/ToolbarIcons/splithorimid.bmp \
	win/ToolbarIcons/splitleft.bmp \
	win/ToolbarIcons/splitright.bmp \
	win/ToolbarIcons/splitvertmid.bmp \
	win/ToolbarIcons/tb_add_column.bmp \
	win/ToolbarIcons/tb_add_row.bmp \
	win/ToolbarIcons/tb_delete_column.bmp \
	win/ToolbarIcons/tb_delete_row.bmp \
	win/ToolbarIcons/tb_merge_cells.bmp \
	win/ToolbarIcons/tb_split_cells.bmp \
	win/ToolbarIcons/transparentlang.bmp \
	win/ToolbarIcons/unindent.bmp \
	win/ToolbarIcons/view_showpara.bmp \
	win/abiword_app_16.ico \
	win/abiword_app_32.ico \
	win/abiword_doc.ico \
	xp/ToolbarIcons/menu_about.xpm \
	xp/ToolbarIcons/menu_add_column.xpm \
	xp/ToolbarIcons/menu_add_row.xpm \
	xp/ToolbarIcons/menu_book.xpm \
	xp/ToolbarIcons/menu_close.xpm \
	xp/ToolbarIcons/menu_copy.xpm \
	xp/ToolbarIcons/menu_credits.xpm \
	xp/ToolbarIcons/menu_cut.xpm \
	xp/ToolbarIcons/menu_delete_column.xpm \
	xp/ToolbarIcons/menu_delete_row.xpm \
	xp/ToolbarIcons/menu_delete_table.xpm \
	xp/ToolbarIcons/menu_delete.xpm \
	xp/ToolbarIcons/menu_exec.xpm \
	xp/ToolbarIcons/menu_exit.xpm \
	xp/ToolbarIcons/menu_export.xpm \
	xp/ToolbarIcons/menu_file-properties.xpm \
	xp/ToolbarIcons/menu_font.xpm \
	xp/ToolbarIcons/menu_help-bubble.xpm \
	xp/ToolbarIcons/menu_help.xpm \
	xp/ToolbarIcons/menu_hyperlink.xpm \
	xp/ToolbarIcons/menu_import.xpm \
	xp/ToolbarIcons/menu_insert_bookmark.xpm \
	xp/ToolbarIcons/menu_insert_graphic.xpm \
	xp/ToolbarIcons/menu_insert_hyperlink.xpm \
	xp/ToolbarIcons/menu_insert_image.xpm \
	xp/ToolbarIcons/menu_insert_symbol.xpm \
	xp/ToolbarIcons/menu_insert_table.xpm \
	xp/ToolbarIcons/menu_jump_to.xpm \
	xp/ToolbarIcons/menu_merge_cells.xpm \
	xp/ToolbarIcons/menu_new_window.xpm \
	xp/ToolbarIcons/menu_new.xpm \
	xp/ToolbarIcons/menu_open.xpm \
	xp/ToolbarIcons/menu_paste.xpm \
	xp/ToolbarIcons/menu_preferences.xpm \
	xp/ToolbarIcons/menu_print_preview.xpm \
	xp/ToolbarIcons/menu_print-setup.xpm \
	xp/ToolbarIcons/menu_print.xpm \
	xp/ToolbarIcons/menu_redo.xpm \
	xp/ToolbarIcons/menu_revert.xpm \
	xp/ToolbarIcons/menu_save_as.xpm \
	xp/ToolbarIcons/menu_save.xpm \
	xp/ToolbarIcons/menu_search_replace.xpm \
	xp/ToolbarIcons/menu_search.xpm \
	xp/ToolbarIcons/menu_spellcheck.xpm \
	xp/ToolbarIcons/menu_split_cells.xpm \
	xp/ToolbarIcons/menu_subscript.xpm \
	xp/ToolbarIcons/menu_superscript.xpm \
	xp/ToolbarIcons/menu_text_bold.xpm \
	xp/ToolbarIcons/menu_text_bottomline.xpm \
	xp/ToolbarIcons/menu_text_center.xpm \
	xp/ToolbarIcons/menu_text_italic.xpm \
	xp/ToolbarIcons/menu_text_justify.xpm \
	xp/ToolbarIcons/menu_text_left.xpm \
	xp/ToolbarIcons/menu_text_overline.xpm \
	xp/ToolbarIcons/menu_text_right.xpm \
	xp/ToolbarIcons/menu_text_strikethrough.xpm \
	xp/ToolbarIcons/menu_text_topline.xpm \
	xp/ToolbarIcons/menu_text_underline.xpm \
	xp/ToolbarIcons/menu_undo.xpm \
	xp/ToolbarIcons/menu_view_showpara.xpm \
	xp/ToolbarIcons/stock_new-text.xpm \
	xp/ToolbarIcons/tb_1column.xpm \
	xp/ToolbarIcons/tb_2column.xpm \
	xp/ToolbarIcons/tb_3column.xpm \
	xp/ToolbarIcons/tb_add_column.xpm \
	xp/ToolbarIcons/tb_add_row.xpm \
	xp/ToolbarIcons/tb_anchor.xpm \
	xp/ToolbarIcons/tb_copy.xpm \
	xp/ToolbarIcons/tb_cut.xpm \
	xp/ToolbarIcons/tb_delete_column.xpm \
	xp/ToolbarIcons/tb_delete_row.xpm \
	xp/ToolbarIcons/tb_edit_editfooter.xpm \
	xp/ToolbarIcons/tb_edit_editheader.xpm \
	xp/ToolbarIcons/tb_edit_removefooter.xpm \
	xp/ToolbarIcons/tb_edit_removeheader.xpm \
	xp/ToolbarIcons/tb_edit.xpm \
	xp/ToolbarIcons/tb_help.xpm \
	xp/ToolbarIcons/tb_hyperlink.xpm \
	xp/ToolbarIcons/tb_insert_graphic.xpm \
	xp/ToolbarIcons/tb_insert_table.xpm \
	xp/ToolbarIcons/tb_LineAll.xpm \
	xp/ToolbarIcons/tb_LineBottom.xpm \
	xp/ToolbarIcons/tb_line_double_space.xpm \
	xp/ToolbarIcons/tb_LineLeft.xpm \
	xp/ToolbarIcons/tb_line_middle_space.xpm \
	xp/ToolbarIcons/tb_LineNone.xpm \
	xp/ToolbarIcons/tb_LineRight.xpm \
	xp/ToolbarIcons/tb_line_single_space.xpm \
	xp/ToolbarIcons/tb_LineTop.xpm \
	xp/ToolbarIcons/tb_lists_bullets.xpm \
	xp/ToolbarIcons/tb_lists_numbers.xpm \
	xp/ToolbarIcons/tb_lists.xpm \
	xp/ToolbarIcons/tb_MergeAbove.xpm \
	xp/ToolbarIcons/tb_MergeBelow.xpm \
	xp/ToolbarIcons/tb_merge_cells.xpm \
	xp/ToolbarIcons/tb_MergeLeft.xpm \
	xp/ToolbarIcons/tb_MergeRight.xpm \
	xp/ToolbarIcons/tb_new.xpm \
	xp/ToolbarIcons/tb_open.xpm \
	xp/ToolbarIcons/tb_para_0before.xpm \
	xp/ToolbarIcons/tb_para_12before.xpm \
	xp/ToolbarIcons/tb_paste.xpm \
	xp/ToolbarIcons/tb_print_preview.xpm \
	xp/ToolbarIcons/tb_print.xpm \
	xp/ToolbarIcons/tb_redo.xpm \
	xp/ToolbarIcons/tb_remove_graphic.xpm \
	xp/ToolbarIcons/tb_save_as.xpm \
	xp/ToolbarIcons/tb_save.xpm \
	xp/ToolbarIcons/tb_script_play.xpm \
	xp/ToolbarIcons/tb_search_replace.xpm \
	xp/ToolbarIcons/tb_search.xpm \
	xp/ToolbarIcons/tb_smiley.xpm \
	xp/ToolbarIcons/tb_spellcheck.xpm \
	xp/ToolbarIcons/tb_SplitAbove.xpm \
	xp/ToolbarIcons/tb_SplitBelow.xpm \
	xp/ToolbarIcons/tb_split_cells.xpm \
	xp/ToolbarIcons/tb_SplitHoriMid.xpm \
	xp/ToolbarIcons/tb_SplitLeft.xpm \
	xp/ToolbarIcons/tb_SplitRight.xpm \
	xp/ToolbarIcons/tb_SplitVertMid.xpm \
	xp/ToolbarIcons/tb_stock_font.xpm \
	xp/ToolbarIcons/tb_stock_paint.xpm \
	xp/ToolbarIcons/tb_symbol.xpm \
	xp/ToolbarIcons/tb_text_align_left.xpm \
	xp/ToolbarIcons/tb_text_align_right.xpm \
	xp/ToolbarIcons/tb_text_bgcolor.xpm \
	xp/ToolbarIcons/tb_text_bold.xpm \
	xp/ToolbarIcons/tb_text_bottomline.xpm \
	xp/ToolbarIcons/tb_text_center.xpm \
	xp/ToolbarIcons/tb_text_direction_ltr.xpm \
	xp/ToolbarIcons/tb_text_direction_rtl.xpm \
	xp/ToolbarIcons/tb_text_dom_direction_rtl.xpm \
	xp/ToolbarIcons/tb_text_fgcolor.xpm \
	xp/ToolbarIcons/tb_text_font.xpm \
	xp/ToolbarIcons/tb_text_indent.xpm \
	xp/ToolbarIcons/tb_text_italic.xpm \
	xp/ToolbarIcons/tb_text_justify.xpm \
	xp/ToolbarIcons/tb_text_overline.xpm \
	xp/ToolbarIcons/tb_text_strikeout.xpm \
	xp/ToolbarIcons/tb_text_subscript.xpm \
	xp/ToolbarIcons/tb_text_superscript.xpm \
	xp/ToolbarIcons/tb_text_topline.xpm \
	xp/ToolbarIcons/tb_text_underline.xpm \
	xp/ToolbarIcons/tb_text_unindent.xpm \
	xp/ToolbarIcons/tb_todo.xpm \
	xp/ToolbarIcons/tb_transparent.xpm \
	xp/ToolbarIcons/tb_undo.xpm \
	xp/ToolbarIcons/tb_view_full_screen.xpm \
	xp/ToolbarIcons/tb_view_showpara.xpm \
	xp/ToolbarIcons/tb_WrapButton.xpm \
	xp/ToolbarIcons/tb_revision_new.xpm \
	xp/ToolbarIcons/tb_revision_select.xpm \
	xp/ToolbarIcons/tb_revision_show_final.xpm \
	xp/ToolbarIcons/tb_revision_find_prev.xpm \
	xp/ToolbarIcons/tb_revision_find_next.xpm \
	xp/ToolbarIcons/tb_semitem_this.xpm \
	xp/ToolbarIcons/tb_semitem_next.xpm \
	xp/ToolbarIcons/tb_semitem_prev.xpm \
	xp/ToolbarIcons/tb_semitem_edit.xpm \
	xp/ToolbarIcons/tb_semitem_stylesheet_apply.xpm

ap_wp_sidebar.cpp: $(srcdir)/xp/sidebar.png
	$(CDUMPAPP) $(srcdir)/xp/sidebar.png g_pngSidebar > ap_wp_sidebar.cpp

BUILT_SOURCES = ap_wp_sidebar.cpp \
	$(NULL)

CLEANFILES = \
	$(BUILT_SOURCES)
